fix: overlapping button in small screen

--- a/fieldkit/assets/styles/sections/_section-home-icon-grid.scss
+++ b/fieldkit/assets/styles/sections/_section-home-icon-grid.scss
@@ -70,5 +70,6 @@
 .section-home-icon-grid__last-item-link {
   display: block;
   margin-top: 1em;
+  min-width: initial;
   width: 100%;
 }
